@@ -3,6 +3,7 @@ Revision history for Gimp-Perl extension.
 	- passing arguments on the commandline works again
 	  (formerly all arguments were treated as integers)
 	- added the PDB extension to the distribution (alpha!)
+	- added tex-to-float and alpha2color.pl plug-ins
 
 1.046 Thu Nov  5 01:53:34 CET 1998
 	- the syntax really gets tricky - references to INT32 and similar
